# MBMAN-COE

./: .cpanel.yml  .env.example  .gitignore  ADMIN_DASHBOARD_GUIDE.md  ADMIN_GUIDE.md  CODE_DOCUMENTATION.md  DEPLOYMENT.md  QUICKSTART.md  README.md  THEME_INTEGRATION.md  WIKI.md  check_data.py  check_data_v2.py  check_program_match.py  debug_curriculum.py  debug_render_test.py  fix_curriculum.py  package.json  passenger_wsgi.py  pnpm-lock.yaml  pyproject.toml  requirements.txt  tailwind.config.js  test_album_workflow.py  test_bulk_actions.py  test_bulk_delete.py  test_bulk_upload.py
auth/: admin.py  apps.py  backends.py  models.py  urls.py  views.py
auth/migrations/: 0001_initial.py
config/: __init__.py  logging.py  settings.py  urls.py
home/: admin.py  bulk_forms.py  context_processors.py  forms.py  models.py  urls.py  views.py  views_bulk.py
home/migrations/: 0001_initial.py  0002_notice_image_alter_notice_file.py  0003_sitelogo.py  0004_rename_specialization_faculty_qualification_and_more.py  0005_curriculum_careerprospect_curriculumsemester_course.py  0006_alter_program_options_program_color_scheme_and_more.py  0007_contactmessage_phone.py  0008_aboutsection_imageslideshow_siteconfiguration_and_more.py  0009_alter_herosection_created_at_and_more.py  0010_add_department_update_faculty.py  0011_add_faculty_tab.py  0012_footerlink.py  0013_footercontent.py  0014_delete_footercontent_alter_notice_description.py  0015_alter_event_options_alter_notice_options_and_more.py  0020_galleryimage.py  (+17 more)
templates/: 403.html  404.html  500.html  503.html  base.html
(+80 files in other folders)
